# 22202-TAKSANOVA-OOP-CPP

./: .gitignore  README.md
lab-0/: CMakeLists.txt  CSVFileWriter.h  FileOpenError.h  FileReader.h  SplitService.h  StatisticStorage.h  main.cpp
lab-0/service/: CSVFileWriter.cpp  SplitService.cpp  StatisticStorage.cpp
lab-0/test/: CSVFileWriterTest.cc  FileReaderTest.cc  SplitServiceTest.cc  StatisticStorageTest.cc
lab-1/: BitArray.cpp  BitArray.h  BitArrayTest.cc  CMakeLists.txt  main.cpp
task-0/: CMakeLists.txt  CSVFileWriter.h  FileReader.h  SplitService.h  StatisticStorage.h  input.txt  main.cpp  output.csv
task-0/service/: CSVFileWriter.cpp  StatisticStorage.cpp
task-0/test/: CSVFileWriterTest.cc  FileReaderTest.cc  SplitServiceTest.cc  StatisticStorageTest.cc
